feat: 아트레터 좋아요, 스크랩 관련 코드 수정, controller에 경로 추가